added integration test with rest assured